the whole thing works

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,7 @@
 @import 'variables';
 @import 'mixins';
+@import 'posts';
 @import 'card';
-@import 'header';
-@import 'main-title';
-@import 'footer';
-@import 'post';
 @import 'category_list';
 @import 'monokai';
 
