--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,14 +6,13 @@ import Footer from "../components/Footer.astro";
 interface Props {
   pageTitle: string;
 }
-const { pageTitle } = Astro.props as Props;
+const pageTitle = "Hentges.AI";
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Styles-->
-    <link rel="stylesheet" href="/assets/css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
