--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,3 +59,57 @@ function cardClick(event: MouseEvent) {
 		</div>
 	</div>
 </BaseLayout>
+
+<style lang="scss">
+	@import "../styles/variables";
+	.main-title {
+		padding: 0;
+		text-align: center;
+		position: sticky;
+		align-self: flex-start;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		min-height: 250px;
+		max-height: 340px;
+		width: 100%;
+
+		left: 0px;
+		background-image: url("https://res.cloudinary.com/dbzsk4ytb/image/upload/c_scale,w_2000/v1631990088/blog-images/chess_background.jpg");
+		background-size: cover;
+		color: $title-color;
+		z-index: 0;
+		margin-top: auto;
+
+		.title-img {
+			display: block;
+			max-width: 100%;
+		}
+
+		h1 {
+			font-size: 3.5rem;
+			font-weight: 700;
+			letter-spacing: -0.015em;
+			line-height: 1.15;
+			text-rendering: optimizeLegibility;
+			margin: 0;
+			z-index: 10;
+		}
+
+		p {
+			margin: 0;
+			z-index: 10;
+			opacity: 0.8;
+			font-weight: 600;
+		}
+	}
+
+	.title-holder {
+		position: flex;
+		top: 50px;
+		display: block;
+		z-index: 1;
+		width: 100%;
+	}
+</style>
