changed menu links to /<category> (was missing initial /)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const uniqueCategories = [
       {
         uniqueCategories.map((tag) => (
           <li>
-            <a class="category_menu_item" href={tag}>
+            <a class="category_menu_item" href={"/" + tag}>
               {tag}
             </a>
           </li>
