--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,10 @@ const pageTitle = "Hentges.AI";
     <!-- Styles-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta
+      name="description"
+      content="Hentges.AI, Author: Michael Hentges, blog entries for programming, woodworking, and chess. Emphasis on Rustlang and cloud technologies."
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
